--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.15.0",
     "jest": "^28.1.0",
-    "nodemon": "^2.0.16",
+    "nodemon": "^2.0.22",
     "supertest": "^6.2.3"
   },
   "dependencies": {
-    "sqlite3": "^5.0.8",
     "express": "^4.18.1",
-    "knex": "^2.0.0"
+    "knex": "^2.0.0",
+    "sqlite3": "^5.0.8",
+    "vin-validator": "^1.0.0"
   },
   "repository": {
     "type": "git",
